--- a/MusicPlaylist.App/MusicPlaylist.App.csproj
+++ b/MusicPlaylist.App/MusicPlaylist.App.csproj
@@ -117,6 +117,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="index.html" />
+    <Content Include="src\index.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
