added music progres player

--- a/MusicPlaylist.App/bin/MusicPlaylist.App.dll.config
+++ b/MusicPlaylist.App/bin/MusicPlaylist.App.dll.config
@@ -39,6 +39,15 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <rewrite>
+      <rules>
+        <rule name="Rewrite myplaylist to index" patternSyntax="Wildcard">
+          <match url="myplaylist"/>
+          <conditions/>
+          <action type="Rewrite" url="index.html" appendQueryString="false"/>
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
