--- a/MusicPlaylist.App/bin/MusicPlaylist.App.dll.config
+++ b/MusicPlaylist.App/bin/MusicPlaylist.App.dll.config
@@ -4,12 +4,15 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
     <add name="MusicPlaylistConnection" connectionString="Server=mssql7.unoeuro.com;Database=tanomu_dk_db;Uid=tanomu_dk;Password=2fhcym3e;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -48,6 +51,7 @@
         </rule>
       </rules>
     </rewrite>
+
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -95,4 +99,31 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+ <location path="api">
+    <system.webServer>
+      <validation validateIntegratedModeConfiguration="false" />
+      <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" >
+        <clear/>
+      </httpErrors>
+    </system.webServer>
+</location>
+  
+<location path="." inheritInChildApplications="false">
+  <system.webServer>
+     <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="400" subStatusCode="-1" />
+      <remove statusCode="404" subStatusCode="-1" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <error statusCode="400" prefixLanguageFilePath="" path="/index.html" responseMode="ExecuteURL"/>
+      <!--<error prefixLanguageFilePath="index.html" statusCode="404" path="index.html" responseMode="File" />-->
+       <error statusCode="404" path="/index.html" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/index.html" responseMode="ExecuteURL" />
+      <error statusCode="403" path="/index.html" responseMode="ExecuteURL" />
+    </httpErrors> 
+
+  </system.webServer>
+</location>
+
 </configuration>
