--- a/MusicPlaylist.App/package.json
+++ b/MusicPlaylist.App/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-player": "^0.19.1",
