--- a/MusicPlaylist.App/package.json
+++ b/MusicPlaylist.App/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react-router-dom": "^4.1.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.3.0"
   }
 }
